--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="js/app.js"></script>
+
 </head>
 <body>
-
+http://kittencup.com/javascript/2015/07/16/Angualrjs%E4%B8%AD%E6%96%87%E8%A7%86%E9%A2%91.html
+<div ui-view></div>
 </body>
+
 </html>
